<resources>
    <string name="app_name">RU Pizzeria</string>
    <string name="add_to_order_button">Add To Order</string>
    <string name="byo_title">Build Your Own</string>
    <string name="add_button">Add &gt;&gt;</string>
    <string name="remove_button">&lt;&lt; remove</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string-array name="pizza_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="sauce_selection">
        <item>Tomato</item>
        <item>Alfredo</item>
    </string-array>
    <string name="price_str">Price: $</string>
    <string name="topping_heading"><b>Choose Toppings (min: 3, max: 7)</b></string>
    <string name="menu_specialty">Specialty Pizzas</string>
    <string name="menu_byo">Build Your Own</string>
    <string name="menu_order">Your Orders</string>
    <string name="menu_store">Store Orders</string>
    <string name="size_main">Sizes</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="extras_main">Extras</string>
    <string name="extras_sauce">Extra Sauce</string>
    <string name="extras_cheese">Extra Cheese</string>
    <string-array name="specialty_pizzas">
        <item>deluxe</item>
        <item>meatzza</item>
        <item>pepperoni</item>
        <item>seafood</item>
        <item>supreme</item>
        <item>buffalo chicken</item>
        <item>margharita</item>
        <item>veggie</item>
        <item>hawaiian</item>
        <item>rutgers special</item>
    </string-array>
    <string name="yourOrderText">Your Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Taxes</string>
    <string name="total">Total</string>
    <string name="CancelYourOrder">Cancel Order</string>
    <string name="PlaceYourOrder">Place Order</string>
    <string name="store_orders_title">Store Orders</string>
    <string name="select_order">Select Order</string>
    <string name="cancel_order">Cancel Order</string>
</resources>