<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/specialtyExtraPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="145dp"
        app:layout_constraintBottom_toTopOf="@+id/specialtyExtraLV"
        app:layout_constraintEnd_toStartOf="@+id/specialtyExtraTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/specialtyExtraTitle"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/specialtyExtraLV"
        android:layout_width="169dp"
        android:layout_height="439dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/sizeText"
        android:layout_width="155dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="11dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/extras_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialtyExtraTitle" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="155dp"
        android:layout_height="49dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/size_main"
        app:layout_constraintBottom_toTopOf="@+id/sizeGroup"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/sizeGroup"
        android:layout_width="138dp"
        android:layout_height="151dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/specialtyExtraATO"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/specialtyExtraSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_small" />

        <RadioButton
            android:id="@+id/specialtyExtraMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_medium" />

        <RadioButton
            android:id="@+id/specialtyExtraLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size_large" />
    </RadioGroup>

    <Button
        android:id="@+id/specialtyExtraATO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="46dp"
        android:text="@string/add_to_order_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioButton
        android:id="@+id/specialtyExtraSauce"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="35dp"
        android:text="@string/extras_sauce"
        app:layout_constraintBottom_toTopOf="@+id/editTextText4"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioButton
        android:id="@+id/specialtyExtraCheese"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="11dp"
        android:text="@string/extras_cheese"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sizeText" />

    <TextView
        android:id="@+id/specialtyExtraPrice"
        android:layout_width="183dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialtyExtraTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>