<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cancelYourOrder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/yourOrderNum"
        android:layout_width="211dp"
        android:layout_height="51dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/yourOrderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/yourOrdersList"
        android:layout_width="262dp"
        android:layout_height="317dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="39dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourOrderNum" />

    <TextView
        android:id="@+id/subtotalYourOrder"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourOrdersList" />

    <TextView
        android:id="@+id/taxesYourOrder"
        android:layout_width="105dp"
        android:layout_height="49dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="74dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourOrdersList" />

    <TextView
        android:id="@+id/totalYourOrder"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="56dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotalYourOrder" />

    <Button
        android:id="@+id/cancelOrderYourOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="42dp"
        android:text="@string/CancelYourOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taxesYourOrder" />

    <Button
        android:id="@+id/placeOrderYourOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="41dp"
        android:text="@string/PlaceYourOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelOrderYourOrder" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/subtotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourOrdersList" />

    <EditText
        android:id="@+id/editTextText8"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourOrdersList" />

    <EditText
        android:id="@+id/editTextText9"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotalYourOrder" />

</androidx.constraintlayout.widget.ConstraintLayout>