<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="@string/store_orders_title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextText6"
                android:layout_width="110dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/select_order" />

            <Spinner
                android:id="@+id/orderPickSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/orderItemsListView"
                android:layout_width="match_parent"
                android:layout_height="584dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancelOrder"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cancel_order"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/storeOrderPrice"
                android:layout_width="178dp"
                android:layout_height="48dp" />

        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>